完善部分权限查询

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,9 @@ spring:
     hibernate:
       ddl-auto: update
 
+mybatis:
+  mapper-locations: classpath:mapper/*DaoMapper.xml
+
 user:
   password:
     error:
