--- a/pom.xml
+++ b/pom.xml
@@ -77,12 +77,14 @@
             <version>1.1.10</version>
         </dependency>
 
-
+        <!--SpringBoot整合MyBatis-->
+        <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper-spring-boot-starter -->
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>1.1.4</version>
+            <version>2.1.5</version>
         </dependency>
+
 
         <dependency>
             <groupId>commons-io</groupId>
