--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,17 @@ spring:
       # 配置检测连接是否有效
       validationQuery: SELECT 1 FROM DUAL
 
+  redis:
+    port: 6666
+    host: 101.132.168.240
+    database: 0
+    timeout: 20000ms
+    jedis:
+      pool:
+        max-active: 2000 #最大连接数
+        max-idle: 10 #最大空闲连接数
+        min-idle: 5 #最小连接数
+
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -49,4 +60,10 @@ user:
   password:
     error:
       count: 4
+redis:
+  cachec:
+    clear:
+      time: 1
+      TimeUnit: DAYS #DAYS 天,MINUTES 分钟,MILLISECONDS 毫秒
+
 
